# legal-document-analyzer

./: .gitignore  .replit  Pasted---1734186762994.txt  Pasted-TypeError-Object-of-type-int32-is-not-JSON-serializable-Traceback-File-home-runner-New-Repl-1--1734187768918.txt  README.md  main.py  pyproject.toml  replit.nix  report_cache_1788e89b364218d658b32d7ba48fb4a7_a56587630606301ae1e1a88038a4d33b.json  requirements.txt
.streamlit/: config.toml
components/: analysis_view.py  document_upload.py  report_view.py
data/: cluster_analysis_1788e89b_a5658763.json  cluster_analysis_6928898703583a10c744f699024a4c69.json  clusters_17ccb5dbce11.json  clusters_f36cca3f7713.json  legal_doc_-1398669.json  legal_doc_-2073316.json  legal_doc_-2261161.json  legal_doc_-4439116.json  legal_doc_-4798218.json  legal_doc_-5761609.json  legal_doc_-5962653.json  legal_doc_-7756840.json  legal_doc_-8113881.json  legal_doc_-8868968.json  legal_doc_-8972964.json  legal_doc_10727619.json  legal_doc_1788e89b.json  legal_doc_25514928.json  legal_doc_35079581.json  legal_doc_39134537.json  legal_doc_45670050.json  legal_doc_46491046.json  legal_doc_83975677.json  legal_doc_85399240.json  legal_doc_87901430.json  legal_doc_90841609.json  report_cache_1788e89b364218d658b32d7ba48fb4a7_a56587630606301ae1e1a88038a4d33b.json
models/: compliance_model.py
processors/: clustering_processor.py  document_processor.py  embedding_processor.py  gpt_processor.py
sample_data/: internal_document.txt  legal_document.txt  legal_sample.txt  regulations_sample.txt
utils/: config.py  pdf_generator.py  (+3 more)
(+2 files in other folders)
