[project]
name = "repl-nix-new-repl-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "hdbscan>=0.8.40",
    "openai>=1.57.4",
    "plotly>=5.24.1",
    "pypdf2>=3.0.1",
    "reportlab>=4.2.5",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.1",
    "tiktoken>=0.8.0",
]
